--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.0.0",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^18.0.0",
+    "react-icons-kit": "^2.0.0",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^5.13.0",
+    "react-spring": "^9.4.4",
     "sass": "^1.50.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
