--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "some-landing",
+  "name": "zsu",
+  "homepage": "https://andriydubovichwork.github.io/some-landing/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +11,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-card-flip": "^1.1.5",
     "react-dom": "^18.0.0",
     "react-icons-kit": "^2.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.13.0",
     "react-spring": "^9.4.4",
@@ -25,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
