--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zsu",
-  "homepage": "https://andriydubovichwork.github.io/some-landing/",
+  "homepage": "https://andriydubovichwork.github.io/ZSU/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-card-flip": "^1.1.5",
     "react-dom": "^18.0.0",
